# archie

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  STYLE_GUIDE.md  pyproject.toml
docs/: brain.md  capabilities.md  getting-started.md  sessions.md  vision.md
persona/agents/: archie-local.json  archie.json  code-reviewer.json  codebase-analyzer.json  general-purpose-local.json  general-purpose.json  plan-reviewer.json  qa-runner.json
persona/guidance/: BRAIN.md  LOCAL.md  TOOLS.md
persona/hooks/: session-digest.py
persona/prompts/: archie.prompt.md  code-reviewer.prompt.md  codebase-analyzer.prompt.md  plan-reviewer.prompt.md  qa-runner.prompt.md
persona/skills/action-analyze-codebase/: SKILL.md
persona/skills/action-brain-ingest/: SKILL.md
persona/skills/action-brain-memory/: SKILL.md
persona/skills/action-brain-read/: SKILL.md
persona/skills/action-brain-update/: SKILL.md
persona/skills/action-brain-write/: SKILL.md
persona/skills/action-council/: SKILL.md
persona/skills/action-create-skill/: SKILL.md
persona/skills/action-create-terraform-module/: SKILL.md
persona/skills/action-project-docs/: SKILL.md
persona/skills/action-research/: SKILL.md
persona/skills/action-review-plan/: SKILL.md
persona/skills/archie-add-capability/: SKILL.md
persona/skills/policy-general-coding/: SKILL.md
persona/skills/policy-lang-python/: SKILL.md
plans/: 002-org-aware-skills.md
plans/done/: 001-workflow-issue-tracking.md  003-brain-read-write.md
sandbox/: Dockerfile
src/archie/: __init__.py  cli.py  config.py  docker.py  output.py
(+38 files in other folders)
