[project]
name = "archie"
version = "0.9.0"
description = "AI-assisted development toolkit"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.11.0"]

[project.scripts]
archie = "archie.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archie"]

[tool.hatch.build.targets.wheel.force-include]
"sandbox/Dockerfile" = "archie/sandbox/Dockerfile"
"persona" = "archie/persona"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
